--- a/src/scss/components/_sections.scss
+++ b/src/scss/components/_sections.scss
@@ -14,7 +14,7 @@
   text-align: center;
 
   h1 {
-    font-size: map.get($font-sizes, '3xl');
+    // font-size: map.get($font-sizes, '3xl');
     letter-spacing: 2px;
     text-transform: uppercase;
     color: var(--text);
