--- a/src/components/ContentSlideshow.astro
+++ b/src/components/ContentSlideshow.astro
@@ -36,7 +36,9 @@ const linkBase = type === "artist" ? "/artists/" : "/releases/";
           {variant === "image-left" ? (
             <>
               <div class="content-slide-image-container">
-                <img src={item.image} alt={item.title} class="content-slide-image" />
+                <a href={`${linkBase}${item.slug}`} class="content-slide-image-link">
+                  <img src={item.image} alt={item.title} class="content-slide-image" />
+                </a>
               </div>
               <div class="content-slide-content">
                 <div class="content-slide-info">
@@ -56,7 +58,9 @@ const linkBase = type === "artist" ? "/artists/" : "/releases/";
                 </div>
               </div>
               <div class="content-slide-image-container">
-                <img src={item.image} alt={item.title} class="content-slide-image" />
+                <a href={`${linkBase}${item.slug}`} class="content-slide-image-link">
+                  <img src={item.image} alt={item.title} class="content-slide-image" />
+                </a>
               </div>
             </>
           )}
