--- a/src/scss/components/_content-slideshow.scss
+++ b/src/scss/components/_content-slideshow.scss
@@ -12,6 +12,12 @@
   position: relative;
   overflow: hidden;
   background: var(--bg);
+  cursor: grab;
+  user-select: none;
+
+  &:active {
+    cursor: grabbing;
+  }
 
   @include respond-to('md') {
     // padding: map.get($spacing, 'xl') 0;
@@ -188,6 +194,12 @@
   height: 100%;
   object-fit: cover;
   display: block;
+}
+
+.content-slide-image-link {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 // Content container
