--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -9,6 +9,12 @@
   min-height: 100vh;
   position: relative;
   overflow: hidden;
+  cursor: grab;
+  user-select: none;
+
+  &:active {
+    cursor: grabbing;
+  }
 }
 
 .hero-slideshow-container {
