Single Artists and Release pages

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -12,7 +12,7 @@ const current = String(active || '').toLowerCase();
 
 const pages = [
   { name: 'ABOUT', path: '/#about', key: 'about' },
-  { name: 'ARTISTS', path: '/#artists', key: 'artists' },
+  { name: 'ARTISTS', path: '/artists', key: 'artists' },
   { name: 'CONTACTS', path: '/#contacts', key: 'contacts' },
   { name: 'RELEASES', path: '/releases', key: 'releases' },
   { name: 'SHOP', path: '/shop', key: 'shop' },
