--- a/src/pages/artists/[artist].astro
+++ b/src/pages/artists/[artist].astro
@@ -18,8 +18,10 @@ const socialLinks: { key: LinkKey; icon: string; alt: string }[] = [
 <PageLayout title={artist.name} active="artists" backLink="/artists" backText="Back to Artists">
   <div class="artist-detail-bg-blur" style={`background-image: url(${imgSrc})`}></div>
   <section class="artist-detail">
-    <img src={imgSrc} alt={artist.name} loading="eager" decoding="async" />
     <div class="artist-info">
+      <div class="artist-image-wrapper">
+        <img src={imgSrc} alt={artist.name} loading="eager" decoding="async" />
+      </div>
       <h1>{artist.name}</h1>
       {Array.isArray(artist.flags) && artist.flags.length > 0 && (
         <div class="artist-flags">
