--- a/src/pages/releases/[release].astro
+++ b/src/pages/releases/[release].astro
@@ -7,15 +7,60 @@ export async function getStaticPaths() {
 }
 
 const { release } = Astro.props;
+const imgSrc = release.image?.startsWith('/') ? release.image : '/' + (release.image || '');
+
+type LinkKey = 'spotify' | 'soundcloud' | 'youtube' | 'beatport';
+const platformLinks: { key: LinkKey; icon: string; alt: string }[] = [
+  { key: 'spotify', icon: '/images/icons/spotify.svg', alt: 'Spotify' },
+  { key: 'soundcloud', icon: '/images/icons/soundcloud.svg', alt: 'SoundCloud' },
+  { key: 'youtube', icon: '/images/icons/youtube.svg', alt: 'YouTube' },
+  { key: 'beatport', icon: '/images/icons/beatport.svg', alt: 'Beatport' },
+];
 ---
 <PageLayout title={release.title} active="releases" backLink="/releases" backText="Back to Releases">
+  <div class="release-detail-bg-blur" style={`background-image: url(${imgSrc})`}></div>
   <section class="release-detail">
-    <img src={release.image} alt={release.title} class="release-cover-large" />
-    <div class="release-text">
+    <div class="release-info">
+      <div class="release-image-wrapper">
+        <img src={imgSrc} alt={release.title} loading="eager" decoding="async" />
+      </div>
       <h1>{release.title}</h1>
-      <p class="release-artist">{release.artist}</p>
+      <p class="release-artists">{release.fullArtists || release.artist}</p>
       <p class="release-date">{release.date}</p>
-      <p class="release-description">{release.description}</p>
+      <div class="release-description">
+        {(release.description || "").split("\n\n").map(p => <p>{p}</p>)}
+      </div>
+      {release.links && Object.values(release.links).some(v => v) && (
+        <div class="release-icons">
+          {platformLinks.map(({ key, icon, alt }) => release.links[key] && (
+            <a href={release.links[key]} target="_blank" rel="noopener noreferrer"><img src={icon} alt={alt} /></a>
+          ))}
+        </div>
+      )}
+      {release.spotifyEmbed && (
+        <div class="release-player release-player-spotify">
+          <iframe
+            src={`https://open.spotify.com/embed/album/${release.spotifyEmbed}?utm_source=generator&theme=0`}
+            width="100%"
+            height="352"
+            frameborder="0"
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+            loading="lazy">
+          </iframe>
+        </div>
+      )}
+      {release.soundcloudEmbed && (
+        <div class="release-player release-player-soundcloud">
+          <iframe
+            width="100%"
+            height="300"
+            scrolling="no"
+            frameborder="no"
+            allow="autoplay"
+            src={`https://w.soundcloud.com/player/?url=${encodeURIComponent(release.soundcloudEmbed)}&color=%2357d6ff&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false&visual=false`}>
+          </iframe>
+        </div>
+      )}
     </div>
   </section>
 </PageLayout>
