--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -79,7 +79,7 @@ import news from "../data/news.json";
     <ContentSlideshow
       id="releases"
       type="release"
-      variant="image-right"
+      variant="image-left"
       items={releases.map(r => ({ image: r.image, title: r.title, subtitle: r.artist, slug: r.slug }))}
       sectionTitle="RELEASES"
     />
